deployments/pathweb/authentik/config/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-external
  annotations:
    external-dns.alpha.kubernetes.io/target: pathweb-cloudlb.0spkl.dev
  labels:
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
    external-dns: cf-yrf-me
spec:
  ingressClassName: traefik-external
  rules:
  - host: auth-home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: authentik
            port: 
              name: http
